# TokenBitcoinOS

./: .gitignore  .gitmessage  CONTRIBUTING.md  PROOF_ONBOARDING.md  QUICKSTART.md  README.md  README_BITCOIN_CLI.md  README_DETAIL.md  README_ID.md  check-balance.sh  create-nft.sh  mint-tokens.sh  prove-mint.sh  prove-nft.sh  quick-transfer.sh  send-btc.sh  spell.sh  test-transfer.sh  transfer-tokens.sh  workflow.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: commitlint.yml  my-token-ci.yml
docs/: PROOF_NFT_TRANSFERS.md  README_BITCOIN_CLI.md  README_DETAIL.md  README_Output.md  README_Status.md  README_Workflow.md  TEST_TRANSFER_README.md
gui/: README.md  app.html  app.js  index.html  package-lock.json  package.json  server-enhanced.js  server.js  start.sh
my-token/: .clippy.toml  .rustfmt.toml  Cargo.toml  LINTING.md  README.md  lint.sh
my-token/.git-hooks/: pre-commit
my-token/.github/: CLIPPY_ISSUES.md
my-token/spells/: mint-nft.yaml  mint-token.yaml  transfer.yaml
my-token/src/: lib.rs  main.rs
my-token/tests/: integration_tests.rs
scripts/: README.md  charm-run.sh  export-utxo.sh  setup-utxo-vars.sh
